=== SVN

* Fixed =~ operator in Sequelizer.

* Fixed ODBC::Dataset#fetch_rows (thanks Dusty).

* Renamed Model.recreate_table to create_table!. recreate_table is deprecated and will issue a warning (#56).

=== 0.2.1 (2007-09-24)

* Added default implementation of Model.primary_key_hash.

* Fixed Sequel::Model() to set dataset for inherited classes.

* Rewrote Model.serialize to use Dataset#transform.

* Implemented Dataset#transform.

* Added gem spec for Windows (without ParseTree dependency).

* Added support for dynamic strings in Sequelizer (#49).

* Query branch merged into trunk.

* Implemented self-changing methods.

* Add support for ternary operator to Sequelizer.

* Fixed sequelizer to evaluate expressions if they don't involve symbols or literal strings.

* Added protection against using #each, #delete, #insert, #update inside query blocks.

* Improved Model#method_missing to deal with invalid attributes.

* Implemented Dataset#query.

* Added Dataset#group_by as alias for Dataset#group.

* Added Dataset#order_by as alias for Dataset#order.

* More model refactoring. Added support for composite keys.

* Added Dataset#empty? method (#46).

* Fixed Symbol#to_field_name to support names with numbers and upper-case characters (#45).

* Added install_no_doc rake task.

* Partial refactoring of model code.

* Refactored dataset-model association and added Dataset#set_row_filter method.

* Added support for case-sensitive regexps to mysql adapter.

* Changed mysql adapter to support encoding option as well.

* Added charset/encoding option to postgres adapter.

* Implemented Model.serialize (thanks Aman Gupta.)

* Changed Model.create to INSERT DEFAULT VALUES instead of (id) VALUES (null) (brings back #41.)

* Fixed Model.new to work without arguments.

* Added Model.no_primary_key method to allow models without primary keys.

* Added Model#this method (#42 thanks Duane Johnson).
