@@ -161,7 +161,7 @@ module Sequel
           result
         rescue => e
           conn.execute(SQL_ROLLBACK)
-          raise e
+          raise e unless SequelRollbackError === e
         ensure
           @transactions.delete(Thread.current)
         end
