@@ -1,2 +1,11 @@
 class SequelError < StandardError
 end
+
+class SequelRollbackError < StandardError
+end
+
+class Object
+  def rollback
+    raise SequelRollbackError
+  end
+end
