@@ -289,6 +289,16 @@ context "Database#transaction" do
     proc {@db.transaction {raise RuntimeError}}.should raise_error(RuntimeError)
   end
   
+  specify "should issue ROLLBACK if rollback is called in the transaction" do
+    @db.transaction do
+      @db.drop_table(:a)
+      rollback
+      @db.drop_table(:b)
+    end
+    
+    @db.sql.should == ['BEGIN', 'DROP TABLE a;', 'ROLLBACK']
+  end
+  
   specify "should be re-entrant" do
     stop = false
     cc = nil
